# nomens

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/nomens/: __init__.py  _core.py
