[build-system]
requires = ["setuptools >= 82"]
build-backend = "setuptools.build_meta"

[project]
name = "nomens"
description = "A lightweight Python utility for defining non-instantiable, attribute-frozen, privacy-aware namespace classes."
version = "1.1.0"
requires-python = ">=3.14"
readme = "README.md"
keywords = ["namespace", "scope", "constants", "mypy"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = ["mypy==2.1.0"]

[[project.authors]]
name = "Kai Tomotake"
email = "kaitomotake@gmail.com"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nomens"]

[tool.setuptools.package-data]
nomens = ["py.typed"]
